deploy/base/channels/networkpolicies/workflow-approval-request-reader-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workflow-approval-request-reader-ingress
  namespace: channels
  labels:
    clerum.io/policy-type: service
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: workflow-approval-request-reader
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8098
      protocol: TCP
    from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: webhook-ingress
      podSelector:
        matchLabels:
          app: webhook-proxy
