deploy/base/channels/networkpolicies/workflow-approval-request-reader-to-channel-reader.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workflow-approval-request-reader-to-channel-reader
  namespace: channels
  labels:
    clerum.io/policy-type: service
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: workflow-approval-request-reader
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 8099
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: channels
      podSelector:
        matchLabels:
          app: channel-reader
          clerum.io/managed-by: host-context-controller
